// Generalitzaci√≥ de l'estructura comuna entre la majoria d'entitats.
// createdAt: 24/09/10 dm. JIQ

syntax = "proto3";

package proto;


// import "loc_entities.proto";
import "timestamp.proto";
// import "usr_enumerations.proto";

option go_package = "./";

// Camps clau i de seguiment.
message BaseEntity {
  optional string    local_id = 1;
  optional string    id = 2;
  uint32             created_by = 3;
  Timestamp          created_at = 4;
  optional uint32    updated_by = 5;
  optional Timestamp updated_at = 6;
  bool               is_new = 7;
  bool               is_updated = 8;
  bool               is_deleted = 9;
}